[package]
name = "torrent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
bytes = "1.5"
hex = "0.4"
url = "2.5"
